Add ssl on transfer

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,7 +3,7 @@ all:$(LIB)
 FILE = $(wildcard *.c)
 OBJ=$(FILE:.c=.o)
 $(LIB):$(OBJ)
-	$(AR) rcs $(notdir $@) $^
+	$(AR) r $(notdir $@) $^
 
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
